RTFL: Fix tab scrollbar / height issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2239,9 +2239,32 @@ dialog .dialog_toolbar .btn a.disabled {
 }
 
 /* fixing padding for all Tabs*/
-.tab-status, .tab-setup, .tab-landing, .tab-adjustments, .tab-auxiliary, .tab-cli, .tab-configuration, .tab-failsafe, .tab-firmware_flasher,
-    .tab-gps, .tab-help, .tab-led-strip, .tab-logging, .tab-modes, .tab-motors, .tab-ports, .tab-receiver,
-    .tab-sensors, .tab-servos, .tab-osd, .tab-power, .tab-beepers, .tab-profiles, .tab-rates, .tab-gyro {
+.tab-adjustments,
+.tab-auxiliary,
+.tab-beepers,
+.tab-cli,
+.tab-configuration,
+.tab-failsafe,
+.tab-firmware_flasher,
+.tab-gps,
+.tab-gyro,
+.tab-help,
+.tab-landing,
+.tab-led-strip,
+.tab-logging,
+.tab-mixer,
+.tab-motors,
+.tab-osd,
+.tab-ports,
+.tab-power,
+.tab-profiles,
+.tab-rates,
+.tab-receiver,
+.tab-sensors,
+.tab-servos,
+.tab-setup,
+.tab-status,
+.tab-vtx {
     height: 100%;
     position: relative;
 }
